# drun

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Integration.md  LICENSE  README.md  install.sh  pyproject.toml  records.json  release.sh  requirements.txt  sample.toml  uninstall.sh  update.sh
.github/workflows/: ci.yml  pypi.yml  release.yml
crates/drun-core/: Cargo.toml
crates/drun-core/src/: checkpoint.rs  config.rs  engine.rs  error.rs  lib.rs  network.rs  proxy.rs  runner.rs  sandbox.rs  session.rs  snapshot.rs  workspace.rs
crates/drun-core/src/assets/: runner.py  runner.ts
crates/drun-mcp/: Cargo.toml
crates/drun-mcp/src/: config.rs  config_cmd.rs  daemon_cmd.rs  deinit.rs  errors.rs  handler.rs  init.rs  live_output.rs  main.rs  projects.rs  reaper.rs  response.rs  server.rs  state.rs  status.rs  tools.rs  uninstall.rs  update_cmd.rs  web.rs
crates/drun-mcp/src/assets/: index.html
crates/drun-mcp/src/bridges/: claude.rs  hermes.rs  mod.rs  shared.rs
crates/drun-py/: Cargo.toml  pyproject.toml
crates/drun-py/python/drun/: __init__.py  chat.py  cli.py  mcp_bridge.py  utils.py
crates/drun-py/src/: lib.rs  session.rs  types.rs
crates/drun-py/tests/: test_chat.py  test_cli.py  test_mcp_bridge.py
docs/: index.html  security.md  troubleshooting.md
examples/: README.md  data_science.py  data_science.toml  drun.toml  external_library.py  fibonacci_benchmark.py  fibonacci_benchmark.toml  fibonacci_slow.py  financial_analysis.py  financial_analysis.toml  heavy_workloads.toml  hello.txt  hello_world.py  multiple_sessions.py  no_network.py  quickstart.py
guides/: integration-claude-skill.md  integration-guide.md
tests/e2e/: conftest.py  pyproject.toml  test_network.py
tests/integration/: Cargo.toml
tests/integration/tests/: session.rs
