[workspace]
members = [
    "crates/drun-core",
    "crates/drun-py",
    "crates/drun-mcp",
]
resolver = "2"

[workspace.dependencies]
walkdir = "2.5.0"
tempfile = "3.27.0"
tokio = "1.52.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.102"
fs_extra = "1.3.0"