[build-system]
requires = ["maturin==1.13.1"]
build-backend = "maturin"

[project]
name = "drun"
dynamic = ["version"]
requires-python = ">=3.10"
license = { text = "PolyForm Noncommercial License 1.0.0" }
dependencies = []

[tool.maturin]
module-name = "drun.drun_internal"
manifest-path = "crates/drun-py/Cargo.toml"
python-source = "crates/drun-py/python"