[package]
name = "drun-core"
version = "0.3.10"
edition = "2024"
description = "Sandboxed execution core for drun"
license = "LicenseRef-PolyForm-Noncommercial-1.0"
repository = "https://github.com/dmosc/drun"
keywords = ["sandbox", "python", "execution", "agent"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
walkdir.workspace = true
which = "7"
toml = "0.8"
similar = "2"
zstd.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"