[package]
name = "drun-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
drun-core = { path = "../drun-core" }
rust-mcp-sdk = { version = "0.9.0", features = ["server", "macros", "stdio"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"