[package]
name = "drun-mcp"
version = "0.3.6"
edition = "2024"
description = "MCP server for drun — sandboxed execution for agentic loops."
license = "LicenseRef-PolyForm-Noncommercial-1.0"
repository = "https://github.com/dmosc/drun"
keywords = ["mcp", "sandbox", "python", "agent", "claude"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
drun-core = { version = "0.3.6", path = "../drun-core" }
rust-mcp-sdk = { version = "0.9.0", features = ["server", "macros", "hyper-server"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "gzip"] }
toml = "0.8"
toml_edit = "0.22"
axum = "0.8"

[dev-dependencies]
tempfile.workspace = true
wiremock = "0.6"