[package]
name = "drun"
version = "0.3.16"
edition = "2024"

[lib]
name = "drun_internal"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["abi3-py39"] }
drun-core = { version = "0.3.16", path = "../drun-core" }

[dev-dependencies]
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
tempfile.workspace = true