[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "drun-sandbox"
version = "0.1.0"
description = "Sandboxed Python execution for agentic loops"
license = { text = "PolyForm-Noncommercial-1.0.0" }
requires-python = ">=3.9"
keywords = ["sandbox", "python", "execution", "agent", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[tool.maturin]
python-source = "python"
module-name = "drun.drun_internal"
