[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "drun-sandbox"
dynamic = ["version"]
description = "Sandboxed code execution for agentic loops"
license = { text = "PolyForm-Noncommercial-1.0.0" }
requires-python = ">=3.9"
keywords = ["sandbox", "python", "execution", "agent", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
chat = ["litellm>=1.0", "mcp>=1.0"]
test = ["pytest>=8", "pytest-asyncio>=0.24"]

[project.scripts]
drun = "drun.cli:main"

[tool.maturin]
python-source = "python"
module-name = "drun.drun_internal"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
